<resources>
    <string name="app_name">Catalogação</string>
    <string name="ant_nest_register">Novo Ninho</string>
    <string name="default_login_rest_error">Ocorreu um problema ao obter as informações do serviço</string>
    <string name="updating_location_content">Atualizando informações de localização</string>
    <string name="title_activity_main">Ninhos</string>
    <string name="title_activity_city_selection">Seleção de Cidade</string>
    <string name="title_activity_sync">Sincronização</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_route_config">Configuração de Rota</string>
    <string name="action_sync">Sincronizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cancel">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="city_name">Nome da cidade</string>

    <string name="erase_all">Apagar Todos</string>

    <string name="select_city">Selecionar Cidade</string>
    <string name="select_location">Selecionar Localização</string>
    <string name="title_activity_coordinates_selection">Mapa</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_nest_dashboard">Detalhes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_ants_list">Amostras de Formigas</string>

    <string name="nav_title_details">Detalhes</string>
    <string name="nav_title_data_update">Atualização</string>
    <string name="nav_title_samples">Amostras</string>

    <string name="my_location">Minha localização</string>
    <string name="location_long_press_message">
        Segure e arraste o marcador para ajustar a localização
    </string>

    <string name="location_alert">Acesso à localização não permitido.</string>

    <string name="loading_location">Carregando Localização...</string>
    <string name="required_field_alert">Preencha esse campo</string>
    <string name="warning">Atenção</string>
    <string name="error_saving_form">Erro ao salvar informações do formulário</string>
    <string name="required_city_alert">Selecione uma cidade</string>

    <string name="menu_group_name_communicate">Comunicação</string>
    <string name="action_sync_pendencies">Sincronizar Pendências</string>
    <string name="action_download_nests">Baixar Ninhos</string>

    <string name="alert_city_already_added">Cidade já adicionada</string>

    <string name="address">Endereço</string>
    <string name="city">Cidade</string>
    <string name="name">Nome</string>
    <string name="vegetation">Vegetação Predominante</string>
    <string name="nest_id">Id do Ninho</string>
    <string name="new_nest">Ninho novo</string>
    <string name="initial_point">Ponto inicial</string>
    <string name="final_point">Ponto final</string>
    <string name="alert_invalid_ant">Amostra de formiga inesistente</string>

    <string name="select_file">Selecione</string>

    <string name="not_synchronized_nests">Ninhos não sincronizados</string>
    <string name="not_synchronized_ants">Amostras de formigas não sincronizadas</string>
    <string name="not_synchronized_data_updates">Atualizações de dados não sincronizadas</string>
    <string name="not_syncronized_photos">Fotos não sincronizadas</string>

    <string name="sync_success">Sincronização concluída com sucesso</string>
    <string name="sync_error">Erro ao sincronizar dados</string>

    <string name="city_has_not_synchronized_nests_alert">
        Essa cidade não pode ser apagada pois possui ninhos / atualizações de dados
        que não foram sincronizadas
    </string>

    <string name="last_update">Última atualização: </string>
    <string name="file_not_supported_alert">Arquivo não suportado</string>
    <string name="description">Descrição</string>

</resources>
