<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/default_spacing"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:paddingLeft="3dp"
        android:textSize="18dp"
        android:text="Ponto inicial do ninho"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:hint="@string/latitude"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/latitude_edit_text"
            android:layout_width="match_parent"
            android:inputType="numberSigned|numberDecimal"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:hint="@string/longitude"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/longitude_edit_text"
            android:layout_width="match_parent"
            android:inputType="numberSigned|numberDecimal"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/select_button"
        android:layout_gravity="center"
        android:text="@string/select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>