<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.jgeniselli.catalogacaolem.pendenciesSync.PendenciesActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:gravity="center"
        android:visibility="gone"
        android:text="Status: atualizando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:padding="@dimen/default_spacing"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView
                android:id="@+id/nestPendenciesView"
                app:title="@string/not_synchronized_nests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView>


            <br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView
                android:id="@+id/dataUpdatePendenciesView"
                app:title="@string/not_synchronized_data_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView>


            <br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView
                android:id="@+id/antPendenciesView"
                app:title="@string/not_synchronized_ants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView>

            <br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView
                android:id="@+id/photoPendenciesView"
                app:title="@string/not_syncronized_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </br.com.jgeniselli.catalogacaolem.pendenciesSync.RightDetailView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_above="@+id/sync_button"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_width="28dp"
            android:layout_height="28dp" />

        <Button
            android:id="@+id/sync_button"
            android:layout_alignParentBottom="true"
            android:text="@string/action_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>



</LinearLayout>
